--- a/_config.yml
+++ b/_config.yml
@@ -108,15 +108,15 @@ more_content: | # this will include new lines to allow paragraphs
   </tr>
 
   <tr>
-      <td style="width:90px;text-align-last:justify;padding-right:10px"><b>Jan. 2018:</b></td>
+      <td style="width:90px;text-align-last:justify;padding-right:5px"><b>- Jan. 2018:</b></td>
       <td>I volunteered as robot game judge at <a href="https://education.theiet.org/first-lego-league-programmes/" target="_blank">The FIRST&#174; LEGO&#174; League</a>
   in Edinburgh, United Kingdom.</td>
   </tr>
 
   </table>
 
-# - **Feb. 2020:** I am one of the organisers of the <a href="https://sites.google.com/view/wicvworkshop-eccv2020/" target="_blank">WiCV</a> workshop to be 
-# held in conjunction with <a href="https://eccv2020.eu/" target="_blank">ECCV 2020</a> in Glasgow, United Kingdom.
+  - **Feb. 2020:** I am one of the organisers of the <a href="https://sites.google.com/view/wicvworkshop-eccv2020/" target="_blank">WiCV</a> workshop to be 
+  held in conjunction with <a href="https://eccv2020.eu/" target="_blank">ECCV 2020</a> in Glasgow, United Kingdom.
 # - **Jan. 2020:** Our abstract Image Enhancement for Underwater 3D Mapping has been accepted to 
 # <a href="https://singapore20.oceansconference.org/" target="_blank">OCEANS 2020</a>.
 # - **Nov. 2019:** I defended my PhD thesis, titled <a href="publications/theses/vargas2020_phd.pdf" target="_blank">Acoustic Source Localisation in Constrained Environments</a>. 
