--- a/_config.yml
+++ b/_config.yml
@@ -90,12 +90,15 @@ more_content: | # this will include new lines to allow paragraphs
   </tr>
 
   <tr>
-      <td style="width:90px;text-align-last:justify;padding-right:5px;padding-left:5px"><b>Jan. 2018:</b></td>
+      <td style="width:90px;text-align-last:justify;padding-right:5px;padding-left:5px"><ul><li><b>Jan. 2018:</b></li></ul></td>
       <td>I volunteered as robot game judge at <a href="https://education.theiet.org/first-lego-league-programmes/" target="_blank">The FIRST&#174; LEGO&#174; League</a>
   in Edinburgh, United Kingdom.</td>
   </tr>
 
   </table>
+
+  - <b>Jan. 2018:</b> I volunteered as robot game judge at <a href="https://education.theiet.org/first-lego-league-programmes/" target="_blank">The FIRST&#174; LEGO&#174; League</a>
+  in Edinburgh, United Kingdom.</td>
 
 # Publications Section
 projects_title: Publications
