--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ more_content: | # this will include new lines to allow paragraphs
   <table>
   <tr>
       <td style="width:125px;text-align-last:justify;padding-right:5px"><ul style="margin-bottom:0"><li><b>Feb. 2020:</b></li></ul></td>
-      <td>I am one of the organisers of the <a href="https://sites.google.com/view/wicvworkshop-eccv2020/" target="_blank">WiCV</a> workshop to be 
+      <td>I am co-organising the <a href="https://sites.google.com/view/wicvworkshop-eccv2020/" target="_blank">WiCV</a> workshop to be 
   held in conjunction with <a href="https://eccv2020.eu/" target="_blank">ECCV 2020</a> in Glasgow, United Kingdom.</td>
   </tr>
 
