--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ about_content: | # this will include new lines to allow paragraphs
   I received my Bachelor's degree in computer science from 
   <a href="http://eisc.univalle.edu.co/index.php/laboratorios/mmv-lab" target="_blank">Universidad del Valle</a> *(Colombia)*, during which I participated in an academic
   exchange with the <a href="https://www.fau.eu/" target="_blank">Friedrich–Alexander University Erlangen–N&uuml;rnberg</a> *(Germany)*. 
-  During my studies, I have also spent time as a research intern at 
+  I have also spent time as a research intern at 
   <a href="https://research.eu.medical.canon/" target="_blank">Toshiba Medical Visualization Systems</a> and 
   <a href="https://www.philips.com/a-w/research/locations/aachen.html" target="_blank">Philips Research Aachen</a>, and participated in an Innovation Think Tank organised by 
   <a href="https://www.siemens-healthineers.com/en-uk/careers/innovation-think-tank" target="_blank">Siemens Healthcare</a>.
