--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: Software Engineer
 # about_title: About Me
 about_profile_image: images/me.jpg
 about_content: | # this will include new lines to allow paragraphs
-  I am currently a Sofware Engineer at <a href="https://sensephotonics.com/" target="_blank">Sense Photonics</a>. Previously, I was a Research Associate at 
+  I am currently a Software Engineer at <a href="https://sensephotonics.com/" target="_blank">Sense Photonics</a>. Previously, I was a Research Associate at 
   <a href="https://orcahub.org/" target="_blank">ORCA Hub</a> working on 3D computer vision for robotics. I obtained my PhD in Signal 
   Processing from <a href="https://www.hw.ac.uk/schools/engineering-physical-sciences/institutes/sensors-signals-systems.htm" target="_blank">Heriot-Watt University</a> and my 
   Master's degree in Computer Vision and Robotics via an Erasmus Mundus Master Programme called <a href="https://www.vibot.org/" target="_blank">VIBOT</a>, awarded by the 
@@ -25,7 +25,7 @@ about_content: | # this will include new lines to allow paragraphs
   <a href="https://www.philips.com/a-w/research/locations/aachen.html" target="_blank">Philips Research Aachen</a>, and participated in an Innovation Think Tank organised by 
   <a href="https://www.siemens-healthineers.com/en-uk/careers/innovation-think-tank" target="_blank">Siemens Healthcare</a>.
 
-  <a href="https://mailhide.io/e/322Ka" target="_blank">Email</a> / 
+  <a href="https://mailhide.io/e/qJg3Nghb" target="_blank">Email</a> / 
   <a href="https://www.linkedin.com/in/evargasv/" target="_blank">LinkedIn</a> / 
   <a href="https://scholar.google.com/citations?user=SyDXC-MAAAAJ&hl=en" target="_blank">Google Scholar</a> / 
   <a href="https://github.com/evargasv" target="_blank">Github</a> / 
@@ -44,7 +44,7 @@ more_content: | # this will include new lines to allow paragraphs
 
   <tr>
       <td style="width:125px;text-align-last:justify;padding-right:5px"><ul style="margin-bottom:0"><li><b>Dec. 2020:</b></li></ul></td>
-      <td>I joined <a href="https://sensephotonics.com/" target="_blank">Sense Photonics</a> as a Software Engineer.</td>
+      <td>I joined <a href="https://sensephotonics.com/" target="_blank">Sense Photonics</a> as a Software Engineer, building intelligent 3D vision systems at low-cost.</td>
   </tr>
 
   <tr>
