--- a/_config.yml
+++ b/_config.yml
@@ -103,6 +103,18 @@ more_content: | # this will include new lines to allow paragraphs
 projects_title: Publications
 projects_content: | # this will include new lines to allow paragraphs
 
+  <font size="4"><b>Journals</b></font>
+
+  - **E. Vargas**, 
+  <a href="https://www.research.ed.ac.uk/portal/en/persons/james-hopgood(c362f445-56b9-44da-b350-c9b32f9f762e)/cv.html?id=10175408" target="_blank">J. R. Hopgood</a>, 
+  <a href="https://researchportal.hw.ac.uk/en/persons/keith-edgar-brown" target="_blank">K. Brown</a>, 
+  <a href="http://homepages.inf.ed.ac.uk/ksubr/" target="_blank">K. Subr</a>, 
+  On Improved Training of CNN for Acoustic Source Localisation, in Transactions on Audio, Speech, and Language Processing **(TASLP)**, 
+  January 2021. 
+  <a href="publications/journals/vargas2021_taslp.pdf"" target="_blank">[pdf]</a>
+  <a href="publications/journals/vargas2021_taslp.bib">[bib]</a>
+  <a href="https://ieeexplore.ieee.org/document/9316801" target="_blank">[doi]</a>
+
   <font size="4"><b>Conferences</b></font>
 
   - **E. Vargas**, 
