--- a/_config.yml
+++ b/_config.yml
@@ -25,11 +25,13 @@ about_content: | # this will include new lines to allow paragraphs
   <a href="https://www.philips.com/a-w/research/locations/aachen.html" target="_blank">Philips Research Aachen</a>, and participated in an Innovation Think Tank organised by 
   <a href="https://www.siemens-healthineers.com/en-uk/careers/innovation-think-tank" target="_blank">Siemens Healthcare</a>.
 
+  <center>
   <a href="https://mailhide.io/e/qJg3Nghb" target="_blank">Email</a> / 
   <a href="https://www.linkedin.com/in/evargasv/" target="_blank">LinkedIn</a> / 
   <a href="https://scholar.google.com/citations?user=SyDXC-MAAAAJ&hl=en" target="_blank">Google Scholar</a> / 
   <a href="https://github.com/evargasv" target="_blank">Github</a> / 
   <a href="cv/vargas_cv.pdf" target="_blank">CV</a>
+  </center>
 
 # News Section
 more_title: News
