--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ about_content: | # this will include new lines to allow paragraphs
   I have also spent time as a research intern at 
   <a href="https://research.eu.medical.canon/" target="_blank">Toshiba Medical Visualization Systems</a> and 
   <a href="https://www.philips.com/a-w/research/locations/aachen.html" target="_blank">Philips Research Aachen</a>, and participated in an Innovation Think Tank organised by 
-  <a href="https://www.siemens-healthineers.com/en-uk/careers/innovation-think-tank" target="_blank">Siemens Healthcare</a>.
+  <a href="https://www.siemens-healthineers.com/en-uk/careers/innovation-think-tank" target="_blank">Siemens Healthcare</a>. test
 
   <center>
   <a href="https://mailhide.io/e/qJg3Nghb" target="_blank" style="font-weight:400;font-family:Roboto,sans-serif">Email</a> /   
