--- a/_config.yml
+++ b/_config.yml
@@ -23,15 +23,13 @@ about_content: | # this will include new lines to allow paragraphs
   I have also spent time as a research intern at 
   <a href="https://research.eu.medical.canon/" target="_blank">Toshiba Medical Visualization Systems</a> and 
   <a href="https://www.philips.com/a-w/research/locations/aachen.html" target="_blank">Philips Research Aachen</a>, and participated in an Innovation Think Tank organised by 
-  <a href="https://www.siemens-healthineers.com/en-uk/careers/innovation-think-tank" target="_blank">Siemens Healthcare</a>. test
+  <a href="https://www.siemens-healthineers.com/en-uk/careers/innovation-think-tank" target="_blank">Siemens Healthcare</a>.
 
-  <center>
-  <a href="https://mailhide.io/e/qJg3Nghb" target="_blank" style="font-weight:400;font-family:Roboto,sans-serif">Email</a> /   
+  <a href="https://mailhide.io/e/qJg3Nghb" target="_blank">Email</a> /   
   <a href="https://www.linkedin.com/in/evargasv/" target="_blank">LinkedIn</a> / 
   <a href="https://scholar.google.com/citations?user=SyDXC-MAAAAJ&hl=en" target="_blank">Google Scholar</a> / 
   <a href="https://github.com/evargasv" target="_blank">Github</a> / 
   <a href="cv/vargas_cv.pdf" target="_blank">CV</a>
-  </center>
 
 # News Section
 more_title: News
@@ -64,13 +62,13 @@ more_content: | # this will include new lines to allow paragraphs
 
   <tr>
       <td style="width:125px;text-align-last:justify;padding-right:5px"><ul style="margin-bottom:0"><li><b>Oct. 2019:</b></li></ul></td>
-      <td>I participated in the third <a href="https://orcahub.org/" target="_blank">ORCA Hub</a> demonstrations. 
+      <td>I participated in the third <a href="https://orcahub.org/" target="_blank">ORCA Hub</a> demonstrations in Blyth, Northumberland. 
   Press release <a href="https://orcahub.org/articles/a-summary-of-the-blyth-capability-demonstrations" target="_blank">here</a>.</td>
   </tr>
 
   <tr>
       <td style="width:125px;text-align-last:justify;padding-right:5px"><ul style="margin-bottom:0"><li><b>Jan. 2019:</b></li></ul></td>
-      <td>I joined the <a href="https://orcahub.org/" target="_blank">ORCA Hub</a> as a Research Associate, and member of the 
+      <td>I joined the <a href="https://orcahub.org/" target="_blank">ORCA Hub</a> as a Research Associate, and also as member of the 
   <a href="http://pro.hw.ac.uk/" target="_blank">Perception and RObotics (PRO)</a> group.</td>
   </tr>
 
