--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ about_content: | # this will include new lines to allow paragraphs
   <a href="https://www.philips.com/a-w/research/locations/aachen.html" target="_blank">Philips Research Aachen</a>, and participated in an Innovation Think Tank organised by 
   <a href="https://www.siemens-healthineers.com/en-uk/careers/innovation-think-tank" target="_blank">Siemens Healthcare</a>.
 
-  <a href="https://mailhide.io/e/qJg3Nghb" target="_blank">Email</a> /   
+  <a href="https://mailhide.io/e/qJg3Nghb" target="_blank">Email</a> /
   <a href="https://www.linkedin.com/in/evargasv/" target="_blank">LinkedIn</a> / 
   <a href="https://scholar.google.com/citations?user=SyDXC-MAAAAJ&hl=en" target="_blank">Google Scholar</a> / 
   <a href="https://github.com/evargasv" target="_blank">Github</a> / 
@@ -68,7 +68,7 @@ more_content: | # this will include new lines to allow paragraphs
 
   <tr>
       <td style="width:125px;text-align-last:justify;padding-right:5px"><ul style="margin-bottom:0"><li><b>Jan. 2019:</b></li></ul></td>
-      <td>I joined the <a href="https://orcahub.org/" target="_blank">ORCA Hub</a> as a Research Associate, and also as member of the 
+      <td>I joined the <a href="https://orcahub.org/" target="_blank">ORCA Hub</a> as a Research Associate, and as member of the 
   <a href="http://pro.hw.ac.uk/" target="_blank">Perception and RObotics (PRO)</a> group.</td>
   </tr>
 
