--- a/_config.yml
+++ b/_config.yml
@@ -57,13 +57,13 @@ more_content: | # this will include new lines to allow paragraphs
       <td>I defended my PhD thesis, <a href="publications/theses/vargas2020_phd.pdf" target="_blank">Acoustic Source Localisation in Constrained Environments</a>. 
   Examiners: <a href="https://sites.google.com/site/abderrahimhalimi/" target="_blank">Abderrahim Halimi</a> (Heriot-Watt University) 
   and <a href="https://www.southampton.ac.uk/engineering/about/staff/krh.page" target="_blank">Keith Holland</a> (University of Southampton). 
-  Slides <a href="publications/theses/vargas2020_phd_slides.pdf" target="_blank">here</a>.</td>
+  Slides can be found <a href="publications/theses/vargas2020_phd_slides.pdf" target="_blank">here</a>.</td>
   </tr>
 
   <tr>
       <td style="width:125px;text-align-last:justify;padding-right:5px"><ul style="margin-bottom:0"><li><b>Oct. 2019:</b></li></ul></td>
       <td>I participated in the third <a href="https://orcahub.org/" target="_blank">ORCA Hub</a> demonstrations in Blyth, Northumberland. 
-  Press release <a href="https://orcahub.org/articles/a-summary-of-the-blyth-capability-demonstrations" target="_blank">here</a>.</td>
+  Press release can be found <a href="https://orcahub.org/articles/a-summary-of-the-blyth-capability-demonstrations" target="_blank">here</a>.</td>
   </tr>
 
   <tr>
@@ -92,7 +92,7 @@ more_content: | # this will include new lines to allow paragraphs
 
   <tr>
       <td style="width:125px;text-align-last:justify;padding-right:5px"><ul style="margin-bottom:0"><li><b>Jan. 2018:</b></li></ul></td>
-      <td>Our paper <a href="publications/conferences/vargas2018_icassp.pdf" target="_blank">Impact of Microphone Configurations on Acoustic Localization</a> has been 
+      <td>Our paper <a href="publications/conferences/vargas2018_icassp.pdf" target="_blank">Impact of Microphone Configurations on 3D Acoustic Localization</a> has been 
       accepted to <a href="https://2018.ieeeicassp.org/" target="_blank">ICASSP 2018</a>.</td>
   </tr>
 
