--- a/_config.yml
+++ b/_config.yml
@@ -92,7 +92,7 @@ more_content: | # this will include new lines to allow paragraphs
 
   <tr>
       <td style="width:125px;text-align-last:justify;padding-right:5px"><ul style="margin-bottom:0"><li><b>Jan. 2018:</b></li></ul></td>
-      <td>Our paper <a href="publications/conferences/vargas2018_icassp.pdf" target="_blank">Impact of Microphone Configurations on 3D Acoustic Localization</a> has been 
+      <td>Our paper <a href="publications/conferences/vargas2018_icassp.pdf" target="_blank">Impact of Microphone Configurations on Acoustic Localization</a> has been 
       accepted to <a href="https://2018.ieeeicassp.org/" target="_blank">ICASSP 2018</a>.</td>
   </tr>
 
