--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ more_content: | # this will include new lines to allow paragraphs
   <table>
 
   <tr>
-      <td style="width:125px;text-align-last:justify;padding-right:5px"><ul style="margin-bottom:0"><li><b>Jan. 2018:</b></li></ul></td>
+      <td style="width:125px;text-align-last:justify;padding-right:5px"><ul style="margin-bottom:0"><li><b>Feb. 2021:</b></li></ul></td>
       <td>Our paper <a href="publications/conferences/vargas2021_icra.pdf" target="_blank">Robust Underwater Visual SLAM Fusing Acoustic Sensing</a> has been 
       accepted to <a href="http://www.icra2021.org/" target="_blank">ICRA 2021</a>.</td>
   </tr>
@@ -126,7 +126,7 @@ projects_content: | # this will include new lines to allow paragraphs
   <a href="https://www.tsaoyu.com/" target="_blank">Y. Cao</a>, 
   <a href="https://researchportal.hw.ac.uk/en/persons/sen-wang" target="_blank">S. Wang</a>, 
   <a href="https://researchportal.hw.ac.uk/en/persons/yvan-petillot" target="_blank">Y. Petillot</a>, 
-  Robust Underwater Visual SLAM Fusing Acoustic Sensing, in IEEE International Conference on Robotics and Automation **(ICRA)**, 
+  Robust Underwater Visual SLAM Fusing Acoustic Sensing, in International Conference on Robotics and Automation **(ICRA)**, 
   Xi'an, China, June 2021. 
   <a href="publications/conferences/vargas2021_icra.pdf" target="_blank">[pdf]</a>
   <a href="publications/conferences/vargas2021_icra.bib">[bib]</a>
