--- a/_config.yml
+++ b/_config.yml
@@ -41,13 +41,14 @@ more_content: | # this will include new lines to allow paragraphs
   <tr>
       <td style="width:125px;text-align-last:justify;padding-right:5px"><ul style="margin-bottom:0"><li><b>Oct. 2021:</b></li></ul></td>
       <td>Following the <a href="https://techcrunch.com/2021/10/05/lidar-developer-ouster-agrees-to-buy-sense-photonics-as-it-takes-aim-at-the-auto-industry/" 
-      target="_blank">acquisition of Sense Photonics</a>, I am now a Software Engineer at <a href="https://ouster.com/" target="_blank">Ouster</a>.</td>
+      target="_blank">acquisition of Sense Photonics</a>, I am now a Software Engineer at <a href="https://ouster.com/industry/automotive/" target="_blank">Ouster 
+      Automotive</a>.</td>
   </tr>
 
   <tr>
       <td style="width:125px;text-align-last:justify;padding-right:5px"><ul style="margin-bottom:0"><li><b>Jul. 2021:</b></li></ul></td>
       <td>Our paper <a href="publications/preprints/luczynski2021arxiv.pdf" target="_blank">Underwater Inspection and Intervention Dataset</a> is now
-      available to download as pre-print.</td>
+      available to download as a preprint.</td>
   </tr>
 
   <tr>
@@ -133,7 +134,7 @@ projects_content: | # this will include new lines to allow paragraphs
 
     - **E. Vargas**, 
   <a href="https://scholar.google.com/citations?user=Y_ntBSUAAAAJ&hl=en&oi=ao" target="_blank">R. Scona</a>,
-  <a href="https://www.linkedin.com/in/jonatan-scharff-willners" target="_blank">J. Scharff Wilners</a>, 
+  <a href="https://scholar.google.com/citations?user=tw79vacAAAAJ&hl=en" target="_blank">J. Scharff Wilners</a>, 
   <a href="https://scholar.google.com/citations?user=lwHwxdUAAAAJ&hl=en&oi=ao" target="_blank">T. Luczynski</a>, 
   <a href="https://www.tsaoyu.com/" target="_blank">Y. Cao</a>, 
   <a href="https://researchportal.hw.ac.uk/en/persons/sen-wang" target="_blank">S. Wang</a>, 
@@ -185,16 +186,16 @@ projects_content: | # this will include new lines to allow paragraphs
   <font size="4"><b>Preprints</b></font>
 
   - <a href="https://scholar.google.com/citations?user=lwHwxdUAAAAJ&hl=en&oi=ao" target="_blank">T. Luczynski</a>,
-  <a href="https://www.linkedin.com/in/jonatan-scharff-willners" target="_blank">J. Scharff Wilners</a>, 
+  <a href="https://scholar.google.com/citations?user=tw79vacAAAAJ&hl=en" target="_blank">J. Scharff Wilners</a>, 
   **E. Vargas**,
   <a href="https://scholar.google.com/citations?user=GovtFqIAAAAJ&hl=en" target="_blank">J. Roe</a>,
   S. Xu,
   <a href="https://www.tsaoyu.com/" target="_blank">Y. Cao</a>, 
   <a href="https://researchportal.hw.ac.uk/en/persons/sen-wang" target="_blank">S. Wang</a>, 
   <a href="https://researchportal.hw.ac.uk/en/persons/yvan-petillot" target="_blank">Y. Petillot</a>, 
-  Underwater Inspection and Intervention Dataset, in **(arXiv)**, July 2021.
+  Underwater Inspection and Intervention Dataset, in **arXiv**, July 2021.
   <a href="publications/preprints/luczynski2021arxiv.pdf" target="_blank">[pdf]</a> 
-  <a href="publications/conferences/bustos2016_ciarp.bib">[bib]</a>
+  <a href="publications/preprints/luczynski2021arxiv.bib">[bib]</a>
 
   <font size="4"><b>Theses</b></font>
 
