--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ more_content: | # this will include new lines to allow paragraphs
   <tr>
       <td style="width:125px;text-align-last:justify;padding-right:5px"><ul style="margin-bottom:0"><li><b>Oct. 2021:</b></li></ul></td>
       <td>Following the acquisition of <a href="https://techcrunch.com/2021/10/05/lidar-developer-ouster-agrees-to-buy-sense-photonics-as-it-takes-aim-at-the-auto-industry/" 
-      target="_blank">Sense Photonics</a>, I joined <a href="https://ouster.com/industry/automotive/" target="_blank">Ouster</a> in building lidar sensors for the automotive
+      target="_blank">Sense Photonics</a>, I joined <a href="https://ouster.com/industry/automotive/" target="_blank">Ouster</a> in building lidar for the automotive
       industry.</td>
   </tr>
 
