--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ about_content: | # this will include new lines to allow paragraphs
   <a href="https://www.siemens-healthineers.com/en-uk/careers/innovation-think-tank" target="_blank">Siemens Healthcare</a>.
 
   <center>
-  <a href="https://mailhide.io/e/oKlHDeDD" target="_blank">Email</a> /
+  <a href="https://mailhide.io/e/4ScnnHL9" target="_blank">Email</a> /
   <a href="https://www.linkedin.com/in/evargasv/" target="_blank">LinkedIn</a> / 
   <a href="https://scholar.google.com/citations?user=SyDXC-MAAAAJ&hl=en" target="_blank">Google Scholar</a> / 
   <a href="https://github.com/evargasv" target="_blank">Github</a> / 
