--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: Software Engineer
 # about_title: About Me
 about_profile_image: images/me.jpg
 about_content: | # this will include new lines to allow paragraphs
-  I am currently a Software Engineer at <a href="https://ouster.com/" target="_blank">Ouster</a>. Previously, I was a Research Associate at 
+  I am currently a Software Engineer at <a href="https://ouster.com/industry/automotive/" target="_blank">Ouster</a>. Previously, I was a Research Associate at 
   <a href="https://orcahub.org/" target="_blank">ORCA Hub</a> working on 3D computer vision for robotics. I obtained my PhD in Signal 
   Processing from <a href="https://www.hw.ac.uk/schools/engineering-physical-sciences/institutes/sensors-signals-systems.htm" target="_blank">Heriot-Watt University</a> and my 
   Master's degree in Computer Vision and Robotics via an Erasmus Mundus Master Programme called <a href="https://www.vibot.org/" target="_blank">VIBOT</a>, awarded by the 
