--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ more_content: | # this will include new lines to allow paragraphs
 
   <tr>
       <td style="width:125px;text-align-last:justify;padding-right:5px"><ul style="margin-bottom:0"><li><b>Jan. 2023:</b></li></ul></td>
-      <td>I joined <a href="https://www.leapautomation.co.uk/" target="_blank">Leap Automation</a> in automating end of line product packing for the fresh produce industry utilising modern robotic, vision and software technology.</td>
+      <td>I joined <a href="https://www.leapautomation.co.uk/" target="_blank">Leap Automation</a> as Senior Software Engineer to streamline end-of-line product packing.</td>
   </tr>
 
   <tr>
@@ -98,12 +98,6 @@ more_content: | # this will include new lines to allow paragraphs
       <td style="width:125px;text-align-last:justify;padding-right:5px"><ul style="margin-bottom:0"><li><b>Jan. 2019:</b></li></ul></td>
       <td>I joined the <a href="https://orcahub.org/" target="_blank">ORCA Hub</a> as a Research Associate, and as member of the 
   <a href="http://pro.hw.ac.uk/" target="_blank">Perception and RObotics (PRO)</a> group.</td>
-  </tr>
-
-  <tr>
-      <td style="width:125px;text-align-last:justify;padding-right:5px"><ul style="margin-bottom:0"><li><b>Jul. 2018:</b></li></ul></td>
-      <td>I attended the <a href="http://irdta.eu/deeplearn2018/" target="_blank">2<sup>nd</sup> International Summer School on Deep Learning 2018</a> 
-  in Genoa, Italy.</td>
   </tr>
 
   </table>
