--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ more_content: | # this will include new lines to allow paragraphs
 
   <tr>
       <td style="width:125px;text-align-last:justify;padding-right:5px"><ul style="margin-bottom:0"><li><b>Jan. 2023:</b></li></ul></td>
-      <td>I joined <a href="https://www.leapautomation.co.uk/" target="_blank">Leap Automation</a> as Senior Software Engineer to streamline end-of-line product packing.</td>
+      <td>I joined <a href="https://www.leapautomation.co.uk/" target="_blank">Leap Automation</a> as a Senior Software Engineer, using computer vision to streamline product packing.</td>
   </tr>
 
   <tr>
